--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        // align-items: center;
 
         width: 60vw;
         padding: 25px;
@@ -42,7 +41,7 @@
     }
     .icons-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
 
         padding-top: 10px;
 
